# fastapi-image-feed-api

./: .env.example  .gitignore  README.md  env.example  main.py  pyproject.toml
backend/app/schemas/: post.py  user.py
backend/app/services/: __init__.py  imagekit.py
backend/app/users/: __init__.py  manager.py
frontend/: __init__.py  app.py
